--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,16 @@
 services:
+
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    ports:
+      - "3000:3000"
+    environment:
+      GF_SECURITY_ADMIN_USER: admin
+      GF_SECURITY_ADMIN_PASSWORD: admin
+    volumes:
+      - grafana_data:/var/lib/grafana
+
   organization-db:
     image: postgres:16
     container_name: organization-db
@@ -60,3 +72,4 @@ volumes:
   warehouse_data:
   product_data:
   employee_data:
+  grafana_data:
