--- a/product-service/Dockerfile
+++ b/product-service/Dockerfile
@@ -8,6 +8,11 @@ RUN ./gradlew bootJar --no-daemon -x test
 
 FROM openjdk:17-jdk-slim
 WORKDIR /app
+
+RUN apt-get update && \
+    apt-get install -y libfreetype6 fontconfig && \
+    apt-get clean
+
 COPY --from=build /app/build/libs/*.jar app.jar
 EXPOSE 8087
 ENTRYPOINT ["java","-jar","app.jar"]
